# khaos-c2

./: .gitignore  README.md  build-linux.sh  install.sh  start_all.ps1
.github/workflows/: release.yml
agent/: Makefile  rebuild_agent.ps1
agent/include/: adv_lazy.h  beacon.h  bof.h  channels.h  commands.h  crypto.h  evasion.h  inject.h  peb_walk.h  persist.h  socks.h  stager_config.h  util.h
agent/res/: agent.manifest  agent.rc
agent/src/: adv_lazy.c  beacon.c  entry.c  evs.c  main.c  util.c
agent/tests/: bof_hello.c  test_bof.c
agent/tools/: gen_evs_strings.py  gen_stager_config.py  get_cert_pin.py  obfuscate.py  pe2sc.py  pe_scrub.py
crypter/: build.py
crypter/res/: loader.manifest  loader.rc  stager.manifest  stager.rc
crypter/stager/: Makefile  stager.c
crypter/stub/: Makefile  payload.h  payload_meta.h  pe_load.c  pe_load.h  peb_utils.h  stub.c
crypter/tools/: bake.py
server/: c2proxy.php  config.example.yaml  database.py  gen_cert.sh  khaos-server.spec  main.py  requirements.txt  start.ps1  start.sh
server/models/: agent.py  cred.py  log.py  task.py  user.py
server/routers/: agents.py  auth.py  beacon.py  build.py  creds.py  stage.py  tasks.py
server/services/: agent_manager.py  channel_reader.py  crypto.py  dns_server.py  ws_manager.py
techniques/evs-xor/: Makefile  README.md  (+2 more)
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/.cargo/: config.toml
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
(+91 files in other folders)
